refactor: update the response type of the get all admins to a page response
Co-authored-by: Copilot <copilot@github.com>